plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.2'
    id 'com.github.spotbugs' version '5.0.14' // Add SpotBugs plugin
}

apply plugin: 'org.jetbrains.intellij'
apply plugin: 'idea'
apply plugin: 'java'

group 'fish.payara.micro.tools'
version '2.3.0'

sourceCompatibility = "17"
targetCompatibility = "17"

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url "https://nexus.dev.payara.fish/repository/payara-artifacts/"
    }
}

dependencies {
    implementation 'fish.payara.tools:payara-qube:2.0.0'
    implementation 'fish.payara.qube:qube-api:2.0.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.1'
}

// SpotBugs Configuration
spotbugs {
    toolVersion = '4.2.3'  // Set the SpotBugs version
    effort = 'max'          // Maximum analysis effort
    reportLevel = 'low'     // Report all issues
    ignoreFailures = true  // Fail the build on SpotBugs violations (set to true if you want the build to continue)
}

tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
    reports {
        xml.enabled = true    // Enable XML report
        html.enabled = false   // Enable HTML report
    }
}

runIde {
    jvmArgs = [
        '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED',
        '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005'
    ]
}

intellij {
    version = '2025.2.3'
    type = 'IC'
    pluginName = 'Payara Community Tools'
    plugins = ['java', 'maven', 'gradle', 'terminal']
}

patchPluginXml {
    sinceBuild = "252.13776"
}

publishPlugin {
    token = System.getProperty("fish.payara.micro.intellij.publish.token")
}
